# xxVoCall

./: CMakeLists.txt  README.md  datahtml2.html
test/: test.cpp
xxVoCall/: CMakeLists.txt
xxVoCallTest/: CMakeLists.txt  audio_mix.cpp  audio_mix_f32le.cpp  audio_mix_s16le.cpp  collect.cpp  collect_desktop.cpp  collect_microphone.cpp  main.cpp  play.cpp  udp_client.cpp  udp_server.cpp
